# native_aot

./: .gitignore  CMakeLists.txt  README.md  run.cmd
engine/src/: main.cpp
scripting/MyGameScripting/: MyGameScripting.csproj  NativeExportAttribute.cs  NativeExports.cs
scripting/NativeExportGenerator/: NativeExportGenerator.cs  NativeExportGenerator.csproj
